<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/toolbarLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="TestToolbar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/DictionaryTheme"
            android:background="?attr/colorPrimary" />

        <!--Search Bar-->
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/my_toolbar"
            android:layout_toStartOf="@+id/searchButton"
            android:layout_alignParentStart="true"
            android:id="@+id/searchBar"
            android:hint="@string/searchHint"
            android:backgroundTint="@color/colorAccentD"
            android:autofillHints="false"
            android:inputType="text" />
        <!--Search Button-->
        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/my_toolbar"
            android:layout_alignParentEnd="true"
            android:text="@string/searchButton" />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dictionaryProgress"
            android:layout_below="@+id/searchButton"
            style="?android:attr/progressBarStyleHorizontal"/>

        <!--HEADWORD-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/headWord"
            android:layout_below="@id/dictionaryProgress"
            android:textSize="40sp"
            android:textColor="@color/colorTextNew"
            android:text=""/>

        <!--PRONUNCIATION-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pronunciation"
            android:layout_below="@id/headWord"
            android:textSize="20sp"
            android:textColor="@color/colorTextNew"
            android:textStyle="italic"/>

        <!--WORD TYPE-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/wordType"
            android:layout_below="@id/pronunciation"
            android:textSize="20sp"/>

        <!--DEFINITION-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/definition"
            android:layout_below="@+id/wordType"
            android:textSize="20sp"/>

        <!--Save Button-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/saveButton"
            android:text="@string/saveButton"/>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>